
# If change version, also need to change WHEEL variable in ./Makefile

[metadata]
name = kcore_pylib
version = 0.9
author = Ken Stillson
author_email = ktools@point0.net
description = A collection of Python libraries and Python-based tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://k3n.cc/0

[options]
include_package_data = True
package_dir =
  kcore = kcore
  ktools = tools
  circuitpy_sim = circuitpy_sim
  home_control = home_control

install_requires =
    requests

[options.entry_points]
console_scripts =
  k_auth = kcore.auth:main
  kmc = ktools.kmc:main
  ktools_settings = ktools.ktools_settings:main
  ratelimiter = ktools.ratelimiter:main
  run_para = ktools.run_para:main

[options.package_data]
ktools = keymaster.crt
